--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oneflow</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <!-- <link rel="stylesheet" href="styles/style.css"> -->
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
@@ -17,480 +17,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@700&display=swap" rel="stylesheet">
-    <style>
-        .shapka {
-            position: absolute;
-            top: 0px;
-            right: 0%;
-            left: 0%;
-            height: 80px;
-            box-shadow: 0px 0px 10px rgba(1, 58, 76, 0.2);
-            border-radius: 0px;
-            background: #FFFFFF;
-        }
-
-        .main {
-            width: 1440px;
-            height: 850px;
-            background-image: url("../assets/images/Rectangle.png");
-        }
-
-        h1 {
-            position: absolute;
-            top: 250px;
-            left: 70px;
-            right: 20px;
-            height: 78px;
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 76px;
-            line-height: 78px;
-            letter-spacing: 2px;
-            color: #013A4C;
-        }
-
-        h1::before {
-            content: "🐼";
-        }
-
-        h1::selection {
-            background: rgb(122, 221, 221);
-        }
-
-        .text {
-            position: absolute;
-            top: 380px;
-            left: 70px;
-            right: 20px;
-            font-family: 'Smooch', cursive;
-            font-style: large;
-            font-weight: 400;
-            font-size: 34px;
-            line-height: 32px;
-            letter-spacing: 0.5px;
-            color: #216175;
-
-        }
-
-        p.text::first-letter {
-            color: #2976e1;
-        }
-
-        ul.hr {
-            margin: 0;
-            padding: 4px;
-        }
-
-        ul.hr li {
-            display: inline;
-            margin-right: 5px;
-            padding: 3px;
-        }
-
-        li {
-            font-family: 'Work Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 20px;
-            color: #013A4C;
-        }
-
-        .ulli {
-            position: absolute;
-            top: 25px;
-            height: 20px;
-        }
-
-        .why {
-            left: 500px;
-            right: 26.44%;
-        }
-
-        .why::after {
-            content: "🐼"
-        }
-
-        .learn {
-            left: 650px;
-            right: 42.99%;
-        }
-
-        .learn::after {
-            content: "🐼"
-        }
-
-        .price {
-            left: 750px;
-            right: 31.64%;
-        }
-
-        .price::after {
-            content: "🐼"
-        }
-
-        .about {
-            left: 850px;
-            right: 16.02%;
-        }
-
-        .about::after {
-            content: "🐼"
-        }
-
-        .blog {
-            left: 950px;
-            right: 3.12%;
-        }
-
-        .blog::after {
-            content: "🐼"
-        }
-
-        button.get {
-            position: absolute;
-            width: 114px;
-            height: 40px;
-            font-family: 'Work Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 18px;
-            text-align: center;
-            color: #013A4C;
-            width: 80px;
-            height: 18px;
-            left: 1150px;
-            top: 17px;
-            box-sizing: border-box;
-            height: 40px;
-            width: 120px;
-            background: #FFD063;
-            border: 1px solid #FFD063;
-            border-radius: 4px;
-        }
-
-        button.get:hover {
-            background: rgba(255, 255, 255, .2);
-        }
-
-        button.get:active {
-            background: white;
-        }
-
-        button.log {
-            position: absolute;
-            width: 75px;
-            height: 40px;
-            width: 41px;
-            height: 18px;
-            left: 1300px;
-            top: 17px;
-            font-family: 'Work Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 13px;
-            line-height: 18px;
-            text-align: center;
-            box-sizing: border-box;
-            position: absolute;
-            height: 40px;
-            width: 80px;
-            background: #FFFFFF;
-            border: 1px solid #346170;
-            border-radius: 4px;
-            color: #013A4C;
-        }
-
-        button.log:hover {
-            background: linear-gradient(#f5ae00, #f59500) #f5ae00;
-        }
-
-        button.log:active {
-            background: linear-gradient(#f59500, #f5ae00) #f59500;
-        }
-
-        .oneflow {
-            position: absolute;
-            top: 500px;
-            left: 70px;
-            right: 20px;
-            width: 176px;
-            height: 50px;
-            background-color: #FFD063;
-            color: #013A4C;
-            border: 1px solid #FFD063;
-            border-radius: 4px;
-        }
-
-        button.oneflow:hover {
-            background: rgba(255, 255, 255, .2);
-        }
-
-        button.oneflow:active {
-            background: white;
-        }
-
-        .take {
-            position: absolute;
-            top: 500px;
-            left: 270px;
-            right: 40px;
-            width: 176px;
-            height: 50px;
-            background-color: #013A4C;
-            color: #dfebee;
-            border: 1px solid #413b30;
-            border-radius: 4px;
-        }
-
-        button.take:hover {
-            background: rgba(231, 46, 46, 0.2);
-        }
-
-        button.take:active {
-            background: rgba(150, 233, 193, 0.5);
-        }
-
-        .globus {
-            position: absolute;
-            top: 25px;
-            left: 1400px;
-            width: 20px;
-            height: 20px;
-        }
-
-        a.globus:hover {
-            background: rgb(182, 227, 67);
-        }
-
-        a.globus:active {
-            background: rgb(182, 227, 67);
-            box-shadow: 0 3px rgb(182, 227, 67) inset;
-        }
-
-        #logo {
-            position: absolute;
-            width: 139.97px;
-            height: 30.95px;
-            left: 20px;
-            right: 0%;
-            top: 17px;
-            bottom: 0.17%;
-            box-shadow: inset 0 0 6px;
-            padding: 10px;
-            border-radius: 10px;
-            background: #eeece0;
-        }
-
-        a.global {
-            text-decoration: none;
-        }
-
-        a.global:link {
-            color: #a449dd;
-            border-bottom: 1px dashed;
-        }
-
-        a.global:visited {
-            color: #346170;
-        }
-
-        a.global:hover {
-            color: #154088;
-            border-bottom: .07em solid;
-        }
-
-        a.global:active {
-            color: #497DDD;
-            border-bottom: 1px dashed;
-        }
-
-        .second {
-            background-image: url("../assets/images/Rectangle1.png");
-            width: 1440px;
-            height: 288px;
-        }
-
-        .secp {
-            color: #f5f2f2;
-            text-align: center;
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 25px;
-            line-height: 38px;
-            text-align: center;
-            letter-spacing: 0.7px;
-        }
-
-        .brand {
-            width: 95px;
-            box-shadow: inset 0 0 6px;
-            padding: 10px;
-            border-radius: 10px;
-            background: #d8ca77;
-        }
-
-        .apotease {
-            height: 27px;
-            position: absolute;
-            left: 100px;
-            top: 965px;
-
-        }
-
-        .tele2 {
-            height: 66px;
-            position: absolute;
-            left: 250px;
-            top: 950px;
-        }
-
-        .dagens {
-            height: 18px;
-            position: absolute;
-            left: 400px;
-            top: 970px;
-        }
-
-        .dormakow {
-            height: 11px;
-            position: absolute;
-            left: 600px;
-            top: 970px;
-        }
-
-        .experis {
-            height: 35px;
-            position: absolute;
-            left: 800px;
-            top: 955px;
-        }
-
-        .newsec {
-            height: 48px;
-            position: absolute;
-            left: 1000px;
-            top: 952px;
-        }
-
-        .system {
-            height: 54px;
-            position: absolute;
-            left: 1200px;
-            top: 950px;
-        }
-
-        .footer {
-            display: flex;
-            flex-flow: column wrap;
-            width: 1440px;
-            height: 276px;
-            background-image: url("../assets/images/footer.png");
-        }
-
-        #flogo {
-            width: 139.97px;
-            height: 30.95px;
-            box-shadow: inset 0 0 6px;
-            padding: 10px;
-            border-radius: 10px;
-            background: #eeece0;
-        }
-
-        .add {
-            flex-basis: 100%;
-            padding: 10px;
-            color: #FFFFFF;
-            font-family: 'Akshar', sans-serif;
-        }
-
-        .pfoot {
-            color: #FFFFFF;
-        }
-
-        .bfoot {
-            background-color: #FFD063;
-            color: #013A4C;
-            width: 203px;
-            height: 40px;
-            left: 400px;
-            background: #FFD063;
-            border: 1px solid #FFD063;
-            border-radius: 4px;
-            color: #fff;
-            background-color: #5e5373;
-            box-shadow: 0 5px 0px #3c354a;
-            transition-duration: 1s, 4s, 4s;
-            transition-property: background-color, top, box-shadow;
-            transition-delay: 0s, 5s, 0.5s;
-            transition-timing-function: ease;
-        }
-
-        button.bfoot:hover {
-            top: 1245px;
-            box-shadow: #3c354a;
-            background-color: #18b5a4;
-        }
-
-        button.bfoot:active {
-            background: white;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        .solid {
-            width: 100%;
-            height: 250px;
-            background-color: aquamarine;
-            border-bottom: 15px solid black;
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            position: absolute;
-            top: -250px;
-            transition: top 1s ease-in-out;
-            animation: render 2s ease-in-out infinite;
-
-        }
-
-        .solid p {
-            text-align: center;
-            margin: 100px;
-        }
-
-        .solid:hover {
-            top: 0;
-        }
-
-        @keyframes render {
-            0% {
-                background-color: aquamarine;
-            }
-
-            50% {
-                background-color: blue;
-            }
-
-            100% {
-                background-color: darkgoldenrod;
-            }
-        }
-
-        .box {
-            width: 50px;
-            height: 50px;
-            background-color: rgb(243, 157, 157);
-
-            position: absolute;
-            top: 0;
-            left: 0;
-            animation: render1 4s ease-in-out 2;
-        }
-    </style>
 </head>
 
 <body>
@@ -511,20 +37,24 @@
                         target="_blank" class="global">Blog</a></li>
             </ul>
         </nav>
-        <div class="box"></div>
-        <button class="get">Get a demo</button>
-        <button class="log">Log in</button>
-        <a href="https://www.figma.com/file/vZXba1qT6Akm12Spjhxx3k/Oneflow?node-id=0%3A1" target="_blank"
-            class="globus"><img src="assets/images/Vector1.svg" alt="logo"></a>
-        </class=>
+        <div>
+            <button class="get">Get a demo</button>
+            <button class="log">Log in</button>
+            <a href="https://www.figma.com/file/vZXba1qT6Akm12Spjhxx3k/Oneflow?node-id=0%3A1" target="_blank"
+                class="globus"><img src="assets/images/Vector1.svg" alt="logo"></a>
+        </div>
     </header>
     <main>
-        <div class="main">
-            <h1>Work wonders</h1>
-            <p class="text">Be more effective with smart contracts <br />that make work faster, and life easier.</p>
-            <button class="oneflow">Get Oneflow
-                free</button>
-            <button class="take">Take a tour</button>
+        <div class="main main2">
+            <div>
+                <h1>Work wonders</h1>
+                <p class="text">Be more effective with smart contracts <br />that make work faster, and life easier.</p>
+            </div>
+            <div class="main3">
+                <button class="oneflow">Get Oneflow
+                    free</button>
+                <button class="take">Take a tour</button>
+            </div>
         </div>
         <div class="second">
             <p class="secp">Join these companies making business flow</p>
