--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         target="_blank" class="global">Blog</a></li>
             </ul>
         </nav>
+        <div class="box"></div>
         <div>
             <button class="get">Get a demo</button>
             <button class="log">Log in</button>
